syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "production_line.proto";
import "product_order.proto";

service MaterialTray{
    rpc Get(GetMaterialTrayRequest)returns(GetMaterialTrayDetailResponse){}
    rpc Update(MaterialTrayInfo)returns(CommonResponse){}
}

message GetMaterialTrayRequest{
    string identifier=1;
    string productInfoID=2;
    string tray_type=3;
}

message MaterialTrayInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //识别码
    string identifier=4;
    //托盘类型
    string trayType=5;
    //是否启用
    bool enable=6;
    //当前状态
    string currentState=7;
    //状态变更时间
    string lastUpdateTime=8;
    //备注
    string remark=9;
    //隶属产线ID
    string productionLineID=10;
    //隶属产线
    ProductionLineInfo productionLine=11;
    //当前产品ID
    string productInfoID=12;
    //当前产品
    ProductInfoInfo productInfo=13;
}

message QueryMaterialTrayRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // @inject_tag: uri:"identifier" form:"identifier"
    string identifier=4;
    // 代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=5;
}

message QueryMaterialTrayResponse{
    Code code=1;
    string message=2;
    repeated MaterialTrayInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialTrayResponse{
    Code code=1;
    string message=2;
    repeated MaterialTrayInfo data=3;
}

message GetMaterialTrayDetailResponse{
    Code code=1;
    string message=2;
    MaterialTrayInfo data=3;
}